@@ -61,6 +61,7 @@ dillo-fltk2
  - Added code for optional image loading (nice interface) very advanced!
  - Added an experimental gzip decoder! 
  - Implemented "Load Images" in the page menu and cleaned up html.hh.
+ - Added shortcuts: PgDn=Spc PgUp=b Back=BackSpace|, Forw=Shift+Backspace|.
    Patch: place, Jorge Arellano
 +- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
    Added const declarations in html parser.
